--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=ems_api
 server.port=8081
 #**************************** Database config ************************
 spring.datasource.url=jdbc:postgresql://localhost:5432/ems_api
-spring.datasource.username=postgres
-spring.datasource.password=rootadmin
+spring.datasource.username=your_DB_username
+spring.datasource.password=your_DB_password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
