--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=ems_api
 #******************************* port *******************************
 server.port=8081
 #**************************** Database config ************************
-spring.datasource.url=jdbc:postgresql://localhost:5432/ems_api
-spring.datasource.username=postgres
-spring.datasource.password=rootadmin
+spring.datasource.url=jdbc:postgresql://localhost:5432/DB-name
+spring.datasource.username=your-DB_username
+spring.datasource.password=your_DB_password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
